# xiaozhi-gmmhmm

./: .gitignore  README.md  auto.sh  requirements.txt  test.sh  tran.sh
sdk/: CMakeLists.txt
sdk/demo/: CMakeLists.txt  main.cpp
sdk/include/: kws_sdk.h
sdk/src/: CMakeLists.txt  feature_scaler.h  gmm_hmm.cpp  gmm_hmm.h  kws_sdk.cpp  mfcc.cpp  mfcc.h  model_loader.cpp  model_loader.h
src/: __init__.py  feature_extraction.py  realtime_inference.py  train_gmm_hmm.py  utils.py
tools/tts/: env.sh  kws_audio_gen_by_google.py  kws_negative_samples_gen.py  record_audio.py
